Updated to last version of VizGrimoireJS.

--- a/templates/qaforums/overview.tmpl
+++ b/templates/qaforums/overview.tmpl
@@ -11,7 +11,6 @@
           <div class="MetricsEvol" data-data-source="qaforums"
                data-metrics="qaforums_qsent"
                data-min="true" style="height:160px;"
-               data-frame-time="true"
                ></div>
           <div class="MicrodashText"
                data-data-source="qaforums" data-metric="qaforums_qsent"></div>
@@ -27,7 +26,6 @@
           <div class="MetricsEvol" data-data-source="qaforums"
                data-metrics="qaforums_qsenders"
                data-min="true" style="height:120px;"
-               data-frame-time="true"
                ></div>
           <div class="MicrodashText"
                data-data-source="qaforums" data-metric="qaforums_qsenders"></div>
@@ -43,7 +41,7 @@
           <div class="MetricsEvol" data-data-source="qaforums"
                data-metrics="qaforums_asent"
                data-min="true" style="height:120px;"
-               data-frame-time="true"
+
                ></div>
           <div class="MicrodashText"
                data-data-source="qaforums" data-metric="qaforums_asent"></div>
@@ -62,7 +60,7 @@
       <div class="panel-body">
 
 	<div class="row"><div class="col-md-12">
-	    <p class="section-title"><i class="fa fa-question"></i> Ask Forums</p>
+	    <p class="section-title"><i class="fa fa-question"></i> <abbr title="Questions and Answers">Q&amp;A</abbr> Forums</p>
 	</div></div>
 	<div class="row">
 	  <div class="col-md-12">
