--- a/templates/scm/contributors.tmpl
+++ b/templates/scm/contributors.tmpl
@@ -1,4 +1,4 @@
-<!-- DISABLED <div class="repository-selector" data-data-source="scm"></div>-->
+<div class="repository-selector" data-data-source="scm"></div>
 
 <!-- commits, authors, stats, top authors -->
 <div class="row">
