Added releases/forge overview to main page.

--- a/templates/common/overview.tmpl
+++ b/templates/common/overview.tmpl
@@ -30,3 +30,8 @@
      data-box-metrics="irc_senders,irc_sent"
      data-ts-metrics="irc_sent,irc_senders"></div>
 
+<div class="DSSummaryBlock" data-data-source="releases"
+     data-box-labels="Authors, Modules"
+     data-box-metrics="releases_authors,releases_modules"
+     data-ts-metrics="releases_modules,releases_authors"></div>
+
