--- a/templates/forge/overview.tmpl
+++ b/templates/forge/overview.tmpl
@@ -1,10 +1,32 @@
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta charset="utf-8"/>
+        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" type="text/css" id="theme"
+              href="VizGrimoireJS/vizgrimoire.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href="custom.css"/>
+        <link href="VizGrimoireJS/bootstrap/css/bootstrap-responsive.css"
+              rel="stylesheet"/>
+        <link rel="shortcut icon" href="favicon.png"/>
+        <link rel="stylesheet" href="VizGrimoireJS/awesome/css/font-awesome.min.css">
+    </head>
+
+    <body>
+        <div class="container-narrow">
+            <div id="Navbar"></div>
+
             <!-- msgs sent, senders, stats, top closers -->
-            <div class="row">
+            <div class="row-fluid">
 
                 <!-- left column -->
                 <div class="col-md-6">
                     <!-- msgs sent -->
-                    <div class="row">
+                    <div class="row-fluid">
                         <div class="col-md-12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
@@ -17,7 +39,7 @@
                     <!-- end msgs sent -->
 
                     <!-- senders -->
-                    <div class="row">
+                    <div class="row-fluid">
                         <div class="col-md-12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
@@ -31,7 +53,7 @@
                     <!-- end senders -->
 
                     <!-- time to attention -->
-                    <div class="row">
+                    <div class="row-fluid">
                         <div class="col-md-12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
@@ -51,13 +73,13 @@
 
                 <!-- right column -->
                 <div class="col-md-6">
-                    <div class="row">
+                    <div class="row-fluid">
                         <table class="table table-striped">
                             <tr>
                                 <td><h5>Forge releases <small> (updated on <span class="GlobalData" data-data-source="releases" data-field="last_date"></span>)</small></h5></td></tr>
                         </table>               
                     </div>
-                    <div class="row">
+                    <div class="row-fluid">
                         <div class="col-md-6">
                             <table class="table table-striped">
                                 <tr>
@@ -110,3 +132,15 @@
 
             </div>
             <!-- end msgs sent, senders, stats, top closers -->
+
+
+            <footer>
+                <div id="Footer"></div>
+            </footer>
+        </div>
+
+        <script type="text/javascript" src="VizGrimoireJS/lib/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/bootstrap/js/bootstrap.js"></script>
+        <script type="text/javascript" src="VizGrimoireJS/vizgrimoire.min.js"></script>
+    </body>
+</html>
