--- a/templates/forge/overview.tmpl
+++ b/templates/forge/overview.tmpl
@@ -24,10 +24,10 @@
             <div class="row-fluid">
 
                 <!-- left column -->
-                <div class="col-md-6">
+                <div class="span6">
                     <!-- msgs sent -->
                     <div class="row-fluid">
-                        <div class="col-md-12">
+                        <div class="span12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_modules"
@@ -40,7 +40,7 @@
 
                     <!-- senders -->
                     <div class="row-fluid">
-                        <div class="col-md-12">
+                        <div class="span12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_authors"
@@ -54,7 +54,7 @@
 
                     <!-- time to attention -->
                     <div class="row-fluid">
-                        <div class="col-md-12">
+                        <div class="span12">
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_releases"
@@ -72,7 +72,7 @@
                 <!-- end left column -->
 
                 <!-- right column -->
-                <div class="col-md-6">
+                <div class="span6">
                     <div class="row-fluid">
                         <table class="table table-striped">
                             <tr>
@@ -80,7 +80,7 @@
                         </table>               
                     </div>
                     <div class="row-fluid">
-                        <div class="col-md-6">
+                        <div class="span6">
                             <table class="table table-striped">
                                 <tr>
                                     <td>
@@ -100,7 +100,7 @@
                                 </tr>                              
                             </table>
                         </div>
-                        <div class="col-md-6">
+                        <div class="span6">
                             <table class="table table-striped">
                             	<tr>
                                     <td>
