--- a/templates/forge/overview.tmpl
+++ b/templates/forge/overview.tmpl
@@ -9,6 +9,7 @@
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_modules"
+                                     data-frame-time="true"
                                      data-min="true" style="height:120px;"></div>
                                      <div class="MicrodashText" data-metric="releases_modules"></div>
                                      </div>
@@ -22,6 +23,7 @@
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_authors"
+                                     data-frame-time="true"
                                      data-min="true" style="height:120px;"></div>
                                      <div class="MicrodashText"
                                        data-data-source="releases" data-metric="releases_authors"></div>
@@ -36,6 +38,7 @@
                             <div class="well">
                                 <div class="MetricsEvol" data-data-source="releases"
                                      data-metrics="releases_releases"
+                                     data-frame-time="true"
                                      data-min="true"
                                   style="height:120px;"></div>
                                   <div class="MicrodashText"
@@ -55,7 +58,7 @@
                         <table class="table table-striped">
                             <tr>
                                 <td><h5>Forge releases <small> (updated on <span class="GlobalData" data-data-source="releases" data-field="last_date"></span>)</small></h5></td></tr>
-                        </table>               
+                        </table>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
@@ -72,10 +75,10 @@
 				<tr>
                                     <td>
                                 	<span class="GlobalData" data-data-source="releases"
-                                              data-field="releases_modules_30"></span>                                		
+                                              data-field="releases_modules_30"></span>
                                     </td>
                                     <td>Modules updated during last month</td>
-                                </tr>                              
+                                </tr>
                             </table>
                         </div>
                         <div class="col-md-6">
@@ -93,12 +96,12 @@
                                               data-field="releases_authors_30"></span>
                                     </td>
                                     <td>Module authors active during last month</td>
-                                </tr>                               
+                                </tr>
                             </table>
                         </div>
                     </div>
 
-                    
+
                     <!-- top senders -->
                     <div class="Top" data-data-source="releases" data-period_all="true"
                          data-metric="authors" data-limit="10"
